updated vscode launchjson

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "request": "launch",
             "program": "${workspaceFolder}/cmake-out/examples/models/llama2/llama_main",
             "args": [
-                "--model-path", "${workspaceFolder}/../models/L3-8B-Stheno-v3.2_kv2_sdpa_xnn_qe_4_32_ctx8192.pte",
-                "--tokenizer-path", "${workspaceFolder}/../models/tokenizer.model"
+                "--model-path", "/mnt/d/models/executorch/Meta-Llama-3.1-8B-Instruct_kv2_sdpa_xnn_qe_4_32_ctx8192.pte",
+                "--tokenizer-path", "/mnt/d/models/executorch/tokenizer.model"
             ],
             "cwd": "${workspaceFolder}",
         }
